# axor-attack-scenarios

./: .gitignore
cloud-exfil/: README.md  pyproject.toml
cloud-exfil/attack/: agent.py  payload.py
cloud-exfil/defense/: executor.py  governed.py  policies.py  tools.py
cloud-exfil/simulation/: metrics.py  runner.py
cloud-exfil/tests/: test_payload.py  test_simulation.py
copilot-staging/: README.md  pyproject.toml
copilot-staging/attack/: corporate_agent.py  hidden_instructions.py  mock_data.py
copilot-staging/defense/: detectors.py  executor.py  governed.py  policies.py  tools.py
copilot-staging/simulation/: metrics.py  runner.py
copilot-staging/tests/: test_payload.py  test_simulation.py
copilot-staging/viz/: animation.py
morris2/: README.md  pyproject.toml
morris2/attack/: network.py  payload.py
morris2/defense/: executor.py  governed.py  policies.py  tools.py
morris2/simulation/: metrics.py  runner.py
morris2/tests/: test_payload.py  test_simulation.py
morris2/viz/: animation.py
