[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "copilot-staging"
version = "0.1.0"
description = "Copilot data staging showcase — Layer 3 behavioral anomaly detection vs intent chain exfiltration"
requires-python = ">=3.11"
dependencies = [
    "axor-core>=0.5.0,<0.6",
    "matplotlib>=3.7",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4", "mypy>=1.9"]

[tool.hatch.build.targets.wheel]
packages = ["attack", "defense", "simulation", "viz"]

[tool.hatch.build.targets.wheel.sources]
"axor-core" = "../../axor-core"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
