[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "morris2"
version = "0.1.0"
description = "Morris II self-replicating worm showcase — raw propagation vs Axor governance containment"
requires-python = ">=3.11"
dependencies = [
    "axor-core>=0.5.0,<0.6",
    "networkx>=3.0",
    "matplotlib>=3.7",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.4"]
llm = ["anthropic>=0.90"]

[tool.hatch.build.targets.wheel]
packages = ["attack", "defense", "simulation", "viz"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = ["E501"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
